--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,10 @@
 use_frameworks!
+source 'https://github.com/JLLJHD/GuiBaiSpecs.git'
 
 platform :ios, '8.0'
 
 target 'GuiBaiCategoryKit_Example' do
-  pod 'GuiBaiCategoryKit', :path => '../'
+  pod 'GuiBaiCategoryKit'
 
   target 'GuiBaiCategoryKit_Tests' do
     inherit! :search_paths
